# task_manager-ddd

./: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
app/application/api/: deps.py  main.py
app/application/api/list_tasks/: list_tasks.py
app/application/api/schemas/list_tasks/: list_tasks.py  tasks.py
app/application/command/list_tasks/: add_task_to_list.py  complete_task.py  create_list_tasks.py  delete_list_tasks.py  delete_task.py
app/application/handlers/commands/list_tasks/: add_task_to_list.py  complete_task.py  create_list_tasks.py  delete_list_tasks.py  delete_task.py
app/application/handlers/queries/list_tasks/: get_all_lists_tasks.py  get_list_tasks.py
app/application/mediator/: mediator.py  register.py
app/application/query/: calendar_dto.py  dto.py
app/application/query/list_tasks/: get_all_lists_tasks.py  get_list_tasks.py
app/application/uow/: base.py
app/domain/entities/: base.py  days.py  tasks.py  users.py
app/domain/exceptions/: base.py  tasks.py
app/domain/value_objects/: base.py  tasks.py  users.py
app/infra/db/: init_db.py  session.py
app/infra/db/models/: calendar.py  tasks.py
app/infra/repository/: base.py  exception.py  sqlalchemy_calendar.py  sqlalchemy_list_tasks.py
app/infra/repository/command/: base.py  exception.py  sqlalchemy_list_tasks.py
app/infra/repository/query/: base.py  sqlalchemy.py  sqlalchemy_calendar.py
app/infra/uow/: sqlalchemy.py
docker_compose/: app.yml
src/app/application/api/: main.py
tests/domain/: test_tasks.py
