[tool.poetry]
name = "fsatapi-example"
version = "0.1.0"
description = ""
authors = ["ilya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.28.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0" 
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"